--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ theme = "madoc-dimension"
 languageCode = "de-de"
 defaultContentLanguage = "de"
 enableRobotsTXT = true
-publishDir = "docs"
+publishDir = "target"
 
 [params]
   logoImage = "/images/mdeja.png"
